                    removed iStart
                    removed iTimer
                    removed iStringStart
                    removed st 

                    removed trackMap

                    removed *ok_color_;
                    removed *error_color_;
                    removed *inactive_color_;
                    removed *ahead_color_;
                    removed *behind_color_;
                    removed *arcade_color_;

                grmain.cpp
                    changed initView(): removed keybinds for removed hud elements
                    changed shutdownCars(): removed unused shutdown board
                    removed grSelectTrackMap()

                grscreen.cpp
                    removed selectTrackMap()

                grscreen.h
                    removed selectTrackMap()


  data/
      config/raceman
        CMakeLists.txt
        quickrace.xml
            changed standard track
        removed practice.xml
        removed singleevent-challange.xml
        removed singleeven-endurance.xml
      data/
        credits.xml
            added Simulated driving assistance developers
        menu/
            mainmenu.xml
                added a back button
                renamed race button
                removed weekend
                removed player
            soundconfigmenu.xml
                added controls for intervention sound volume
            stopracemenu.xml
                removed controls menu
            optionsmenu.xml
                removed unused menus
            creditsmenu.xml
                added new section
            removed playerconfig.xml
            raceselectmenu.xml
                removed practice and optimizationMT buttons
            soundconfig.xml
                removed sound system option
            stopracemenu.xml
                removed controls and force feedback buttons
        
  cmake/
    checks.cmake
        changed IF(OPTION_3RDPARTY_SQLITE3) (removed if)